# KDChart

./: .clang-format  .cmake-format.py  .codespellrc  .gitignore  .kd-setup  .kdab-setup  .krazy  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGES  CMakeLists.txt  CMakePresets.json  CPackIgnores.txt  Doxyfile  FindKDChart.cmake  INSTALL-bindings.txt  INSTALL-cmake.txt  INSTALL.txt  KDChartConfig-buildtree.cmake.in  KDChartConfig.cmake.in  LICENSE  LICENSE.GPL.txt  LICENSE.txt  README-WASM.md  README-bindings.md  README-commercial.txt  README.md  README.txt  REUSE.toml  appveyor.yml  autogen.py  configure.bat  configure.sh  debian.changelog  debian.control  g++.pri  genignore.py  kdchart-2.6.2.tar.gz.asc  kdchart-2.6.2.zip.asc  (+9 more)
docs/: CMakeLists.txt
docs/api/: CMakeLists.txt  Doxyfile.cmake  footer.html
examples/: CMakeLists.txt  README.txt  examples.pri  examples.pro  table-of-contents.txt
examples/Axes/: Axes.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_LineChart.cpp
examples/Axis/: Axes.pro  Axis.pro  Makefile
examples/Background/: Background.pro  CMakeLists.txt  main.cpp
examples/Bars/: BarChart  Bars.pro  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_BarChart.cpp
examples/Charts/: Charts.pro
examples/DataValueTexts/: CMakeLists.txt  DataValueTexts.pro  DataValueTexts.qrc  barPositiveNegative.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/Demo/: Demo.pro  kdabstractsourcepanel.cpp  kdabstractsourcepanel.h  kdbasicsourcepanel.cpp  kdbasicsourcepanel.h  kdbasicsourcepanel.ui  kdchartdemo.cpp  kdchartdemo.h  kdchartdemo.ui  main.cpp  tablemodel.cpp  tablemodel.h
examples/DrawIntoPainter/: CMakeLists.txt  DrawIntoPainter.pro  DrawIntoPainter.qrc  framewidget.cpp  framewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/EmptyValues/: CMakeLists.txt  EmptyValues.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/Gantt/: Gantt.pro
examples/Grids/: Grids.pro  main.cpp
examples/HeaderFooterLegends/: HeaderFooterLegends.pro  addheaderdialog.ui  addlegenddialog.ui  derivedaddlegenddialog.cpp  derivedaddlegenddialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/HeadersFooters/: HeadersFooters.pro  mainwindow.cpp  mainwindow.ui
examples/Legends/: Legends.pro  mainwindow.h  mainwindow.ui
examples/LeveyJennings/: LeveyJennings.pro
examples/Lines/: Lines.pro  mainwindow.cpp  mainwindow.h
examples/ModelView/: ModelView.pro  mainwindow.cpp  mainwindow.h  pieview.cpp  pieview.h
examples/MultidimensionalData/: MultidimensionalData.pro  mainwindow.cpp  mainwindow.h  multidata.csv
examples/NoValues/: CMakeLists.txt  NoValues.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/Pie/: Pie.pro  Pie.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/Plane/: Plane.pro
examples/Plotter/: Plotter.pro
examples/RealTime/: CMakeLists.txt  RealTime.pro  main.cpp
examples/RealTimeBenchmark/: Dialog.cpp  RealTimeBenchmark.pro  main.cpp
examples/RealTimeLineChart/: Dialog.cpp  Dialog.h  Dialog.ui  RealTimeLineChart.pro  main.cpp
examples/RootIndex/: mainwindow.h
examples/SharedAbscissa/: SharedAbscissa.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/Sql/: CMakeLists.txt  Sql.pro  main.cpp
examples/Stock/: Stock.pro
examples/TernaryCharts/: TernaryCharts.pro
examples/Widget/: Widget.pro  main.cpp  mainwindow.cpp
examples/Zoom/: Zoom.pro  main.cpp  mainwindow.cpp  mainwindow.h  zoomwidget.cpp  zoomwidget.h
examples/demo/: CMakeLists.txt  axissettings.cpp  axissettings.h  axissettings.ui  colorslider.cpp  colorslider.h  datasetsettings.cpp  datasetsettings.h  datasetsettings.ui  datavaluesettings.cpp  datavaluesettings.h  datavaluesettings.ui  demo.pro  demo.qrc  diagramsettings.cpp  diagramsettings.h  diagramsettings.ui  diagramtypedialog.cpp  diagramtypedialog.h  diagramtypedialog.ui  gradientdialog.cpp  gradientdialog.h  gradientdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h
examples/tools/: TableModel.cpp  TableModel.h  tools.pro  tools_export.h
features/: CMakeLists.txt  kdchart.prf
python/: CMakeLists.txt
python/PyKDChart/: CMakeLists.txt  __init__.py.cmake
python/cmake/: FindPySide2.cmake  PySide2ModuleBuild.cmake  PySide2Tools.cmake
python/tests/: CMakeLists.txt  config.py.cmake  tst_importModule.py
qtests/: CMakeLists.txt  qtests.pri  qtests.pro  runTest.bat  serializertests.pri
qtests/AbstractAreaBaseSerializer/: main.cpp
qtests/AttributesModel/: AttributesModel  AttributesModel.pro  CMakeLists.txt  Makefile  main.cpp  main.moc
qtests/AttributesModelSerializer/: AttributesModelSerializer.pro  main.cpp
qtests/AttributesSerializer/: AttributesSerializer.pro  main.cpp
qtests/AxesSerializer/: main.cpp
qtests/AxisOwnership/: AxisOwnership.pro  CMakeLists.txt  main.cpp
qtests/BarDiagrams/: BarDiagrams.pro  CMakeLists.txt  main.cpp
qtests/Cloning/: main.cpp  (+2 more)
src/: CMakeLists.txt  CartesianCoordinateTransformation.h  KDChartAbstractArea.cpp  KDChartAbstractArea.h  KDChartAbstractAreaBase.cpp  KDChartAbstractAreaBase.h  KDChartAbstractAreaBase_p.h  KDChartAbstractAreaWidget.cpp  KDChartAbstractAreaWidget.h  KDChartAbstractAreaWidget_p.h  KDChartAbstractArea_p.h  KDChartAbstractAxis.cpp  KDChartAbstractAxis.h  KDChartAbstractAxis_p.h  KDChartAbstractCartesianDiagram.cpp  KDChartAbstractCartesianDiagram.h  KDChartAbstractCartesianDiagram_p.h  KDChartAbstractCoordinatePlane.cpp  KDChartAbstractCoordinatePlane.h  KDChartAbstractCoordinatePlane_p.h  KDChartAbstractDiagram.cpp  KDChartAbstractDiagram.h  KDChartAbstractDiagram_p.cpp  KDChartAbstractDiagram_p.h  KDChartAbstractGrid.cpp  KDChartAbstractGrid.h  KDChartAbstractPieDiagram.cpp  KDChartAbstractPieDiagram.h  KDChartAbstractPieDiagram_p.h  KDChartAbstractPolarDiagram.cpp  KDChartAbstractPolarDiagram.h  KDChartAbstractPolarDiagram_p.h  KDChartAbstractProxyModel.cpp  KDChartAbstractProxyModel.h  KDChartAbstractThreeDAttributes.cpp  KDChartAbstractThreeDAttributes.h  KDChartAbstractThreeDAttributes_p.h  KDChartArea.cpp  KDChartArea.h  KDChartArea_p.h  (+171 more)
tests/: CMakeLists.txt  tests.pro
(+1356 files in other folders)
