set(QT_USE_QTSVG TRUE)
set(QT_USE_QTSQL TRUE)

include(${QT_USE_FILE})

if(Qt5Core_FOUND)
  find_package(Qt5Widgets REQUIRED)
  list(APPEND QT_LIBRARIES Qt5::Widgets)
  include_directories(${Qt5Widgets_INCLUDE_DIRS})

  find_package(Qt5PrintSupport REQUIRED)
  list(APPEND QT_LIBRARIES Qt5::PrintSupport)
  include_directories(${Qt5PrintSupport_INCLUDE_DIRS})
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC TRUE)
set(CMAKE_AUTORCC TRUE)

if(${PROJECT_NAME}_STATIC)
  add_definitions(-DKDCHART_STATICLIB)
else()
  add_definitions(-DTESTTOOLS_DLL)
endif()

remove_definitions(-DQT_NO_CAST_FROM_ASCII)

function(ADD_KDCHART_EXAMPLE subfolder)
  set(name "${subfolder}-example")
  string(REPLACE "/" "" name "${name}")

  file(GLOB target_sources
    LIST_DIRECTORIES false
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/${subfolder}/*.qrc"
    "${CMAKE_CURRENT_SOURCE_DIR}/${subfolder}/*.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/${subfolder}/*.cpp"
  )

  add_executable(${name} ${target_sources})
  target_link_libraries(${name} ${QT_LIBRARIES} kdchart testtools)
endfunction()

# Examples
ADD_KDCHART_EXAMPLE("Axis/Chart")
ADD_KDCHART_EXAMPLE("Axis/Labels")
ADD_KDCHART_EXAMPLE("Axis/Parameters")
ADD_KDCHART_EXAMPLE("Axis/Widget")
ADD_KDCHART_EXAMPLE("Background")
ADD_KDCHART_EXAMPLE("Bars/Advanced")
ADD_KDCHART_EXAMPLE("Bars/Parameters")
ADD_KDCHART_EXAMPLE("Bars/Simple")
ADD_KDCHART_EXAMPLE("DataValueTexts")
ADD_KDCHART_EXAMPLE("demo")
ADD_KDCHART_EXAMPLE("DrawIntoPainter")
ADD_KDCHART_EXAMPLE("EmptyValues")
ADD_KDCHART_EXAMPLE("Gantt/legend_example")
ADD_KDCHART_EXAMPLE("Gantt/project")
ADD_KDCHART_EXAMPLE("Grids/CartesianGrid")
ADD_KDCHART_EXAMPLE("Grids/PolarGrid")
ADD_KDCHART_EXAMPLE("HeadersFooters/Advanced")
ADD_KDCHART_EXAMPLE("HeadersFooters/HeadersFootersParameters")
ADD_KDCHART_EXAMPLE("HeadersFooters/HeadersFootersSimple")
ADD_KDCHART_EXAMPLE("Legends/LegendAdvanced")
ADD_KDCHART_EXAMPLE("Legends/LegendOverDiagram")
ADD_KDCHART_EXAMPLE("Legends/LegendParameters")
ADD_KDCHART_EXAMPLE("Legends/LegendSimple")
ADD_KDCHART_EXAMPLE("LeveyJennings/Simple")
ADD_KDCHART_EXAMPLE("Lines/Advanced")
ADD_KDCHART_EXAMPLE("Lines/AreaPerCell")
ADD_KDCHART_EXAMPLE("Lines/Parameters")
ADD_KDCHART_EXAMPLE("Lines/PointChart")
ADD_KDCHART_EXAMPLE("Lines/PointWidget")
ADD_KDCHART_EXAMPLE("Lines/SimpleLineWidget")
ADD_KDCHART_EXAMPLE("ModelView/HidingData")
ADD_KDCHART_EXAMPLE("ModelView/TableView")
ADD_KDCHART_EXAMPLE("NoValues")
ADD_KDCHART_EXAMPLE("Pie/Advanced")
ADD_KDCHART_EXAMPLE("Pie/Parameters")
ADD_KDCHART_EXAMPLE("Pie/Simple")
ADD_KDCHART_EXAMPLE("Plane/AdjustedBoundaries")
ADD_KDCHART_EXAMPLE("Plane/OverlayedPlanes")
ADD_KDCHART_EXAMPLE("Plotter/Advanced")
ADD_KDCHART_EXAMPLE("Plotter/BigDataset")
ADD_KDCHART_EXAMPLE("Plotter/BubbleChart")
ADD_KDCHART_EXAMPLE("Plotter/Isometric")
ADD_KDCHART_EXAMPLE("Plotter/Logarithmic")
ADD_KDCHART_EXAMPLE("Plotter/Simple")
ADD_KDCHART_EXAMPLE("Plotter/Timeline")
ADD_KDCHART_EXAMPLE("Polar/Advanced")
ADD_KDCHART_EXAMPLE("Polar/Parameters")
ADD_KDCHART_EXAMPLE("Polar/Simple")
ADD_KDCHART_EXAMPLE("RealTime")
ADD_KDCHART_EXAMPLE("SharedAbscissa/SeparateDiagrams")
ADD_KDCHART_EXAMPLE("Sql")
ADD_KDCHART_EXAMPLE("Stock/Advanced")
ADD_KDCHART_EXAMPLE("TernaryCharts/Advanced")
ADD_KDCHART_EXAMPLE("Widget/Advanced")
ADD_KDCHART_EXAMPLE("Widget/Parameters")
ADD_KDCHART_EXAMPLE("Widget/Simple")
ADD_KDCHART_EXAMPLE("Zoom/Keyboard")
ADD_KDCHART_EXAMPLE("Zoom/ScrollBars")

